--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "moment": "^2.29.4",
+    "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
