--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "async-redis": "^2.0.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "mongoose": "^7.6.1",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
